# pyIPT

./: CITATION.cff  README.md  pyproject.toml
src/pyIPT/: publish_to_ipt.py
